# art_activity_collection

./: .dockerignore  .env.example  .gitignore  Dockerfile  PackageInstall.md  README.md  nixpacks.toml  pyproject.toml
data/html/met/: met_events_20260221T151854Z.html  met_events_20260221T151854Z.txt
data/html/moma/: moma_kids_events_20260223T134442Z.html  moma_kids_events_20260223T134442Z.txt  moma_teens_events_20260223T134441Z.html  moma_teens_events_20260223T134441Z.txt
db/: schema.sql  schema_latest.sql
frontend/: README.md
frontend/app/: page.tsx
frontend/lib/: api.ts  types.ts
scripts/: run_crawler_guarded.sh  run_met_parser.py  run_mfa_parser.py  run_moma_parser.py  run_whitney_parser.py
src/: main.py
src/api/routes/: activities.py
src/art_activity_collection.egg-info/: PKG-INFO  SOURCES.txt
src/core/: config.py
src/crawlers/adapters/: moma.py
src/crawlers/pipeline/: runner.py
src/crawlers/sources/: registry.yaml
src/schemas/: activity.py
src/services/: activity_service.py
